--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -1,15 +1,9 @@
-.bar {
+.tabBar {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   width: 100%;
-  height: 50px;
-  background: orange;
-  color: #fff;
+  bottom: 0;
 }
 
-.bar a {
-  display: inline-block;
-  margin: 20px;
+.tabBar .iconfont {
+  font-size: 24px;
 }
